--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -8,30 +8,9 @@
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
-    <style>
-        /* Aplicando a fonte globalmente */
-        body {
-            font-family: 'Poppins', sans-serif;
-        }
-
-        .flash-container {
-            position: absolute;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 90%;
-            max-width: 600px;
-            z-index: 1000;
-        }
-
-        .alert {
-            text-align: center;
-            font-weight: bold;
-        }
-
-    </style>
     
+    <!-- CSS Base -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
 
